fixed bug where hint was displaying behind the emojis

--- a/public/res/styles.css
+++ b/public/res/styles.css
@@ -176,6 +176,7 @@ h1, h2, h3, h4 {
   bottom: 20px;
   left: 20px;
   right: 20px;
+  z-index: -1;
 }
 
 .emoji-block {
